fix: change .background z-index

--- a/src/components/global/header/header.scss
+++ b/src/components/global/header/header.scss
@@ -71,7 +71,7 @@
   left: 0;
   bottom: 0;
   background: var(--kd-color-background-container-default);
-  z-index: 0;
+  z-index: -1;
   pointer-events: none;
 
   @media screen and (min-width: 42rem) {
